added favicon and contact me sheet

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Michael T. LeBlanc</title>
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -63,7 +64,7 @@
         <div class="WeatherAPI-Finder">
             <div class="text-and-links">
                 <h3>WeatherAPI Finder</h3>
-                <p>A fun project I created using the OpenWeatherMap API. Gave me great experience in fetching API's and subsequently implenting the data received to represent
+                <p>A fun project I created using the OpenWeatherMap API. I got great experience in fetching API's and subsequently implenting the data received to represent
                     information to the user depending on the location they are looking for weather on.
                 </p>
                 <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://mleblanc94.github.io/WeatherAPI-Finder/"> View the website</a></p>
