made changes to contact me page

--- a/contactMe.html
+++ b/contactMe.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact me</title>
+        <link rel="stylesheet" href="style2.css">
     </head>
-    <body class="contact-me-body">
-        <div class=""></div>
+    <body>
+        <div class="contact-me-div">
+
+        </div>
     </body>
 </html>
