--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span class="push">
                 <li><a href="">PORTFOLIO</a></li>
                 <li><a href="">RESUME</a></li>
-                <li><a href="" class="contactMe">CONTACT ME</a></li>
+                <li><a href="contactMe.html" class="contactMe">CONTACT ME</a></li>
             </span>
         </ul>
     </nav>
