made changes to contactMe page

--- a/contactMe.html
+++ b/contactMe.html
@@ -7,6 +7,18 @@
         <link rel="stylesheet" href="style2.css">
     </head>
     <body>
+        <!-- NAV BAR -->
+
+    <nav class="sticky">
+        <ul>
+            <li><a href="index.html">MICHAEL LEBLANC | Web Developer</a></li>
+            <span class="push">
+                <li><a href="">PORTFOLIO</a></li>
+                <li><a href="">RESUME</a></li>
+                <li><a href="contactMe.html" class="contactMe">CONTACT ME</a></li>
+            </span>
+        </ul>
+    </nav>
         <div class="contact-me-div">
 
         </div>
