--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <nav class="sticky">
         <ul>
-            <li>MICHAEL LEBLANC | Web Developer</li>
+            <li><a href="index.html">MICHAEL LEBLANC | Web Developer</a></li>
             <span class="push">
                 <li><a href="">PORTFOLIO</a></li>
                 <li><a href="">RESUME</a></li>
