--- a/contactMe.html
+++ b/contactMe.html
@@ -20,7 +20,10 @@
         </ul>
     </nav>
         <div class="contact-me-div">
-
+            <h2>Email: leblancmichael94@gmail.com</h2>
+            <h2>Phone: (978) 399 8442</h2>
+            <h2>Location: Boston, MA</h2>
+            <h2></h2>
         </div>
     </body>
 </html>
