--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             <h3>Hi my name Michael.</h3>
             <h3>This is my front-end developer portfolio</h3>
         </div>
+        <div class="social-media">
+            <i class="fab fa-github"></i>
+            <i class="fab fa-linkedin"></i>
+        </div>
     </div>
 </div>
 
