added social media

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <div class="cover-content">
         <div class="pic-div"><img class="circular" src="profile-picture.jpg" alt="profile-pic"></div>
         <div class="cover-text">
-            <h3>Hi my name Michael.</h3>
+            <h3>Hi, my name Michael.</h3>
             <h3>This is my front-end developer portfolio</h3>
-        </div>
-        <div class="social-media">
-            <i class="fab fa-github"></i>
-            <i class="fab fa-linkedin"></i>
+            <h1 class="socials">
+                <i class="fab fa-github"></i>
+                <i class="fab fa-linkedin"></i>
+            </h1>
         </div>
     </div>
 </div>
