made significant changes to page functionality as well as design to contact page

--- a/contactMe.html
+++ b/contactMe.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact me</title>
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="stylesheet" href="style2.css">
     </head>
     <body>
-        <!-- NAV BAR -->
+    <!-- NAV BAR -->
 
     <nav class="sticky">
         <ul>
@@ -19,10 +20,13 @@
             </span>
         </ul>
     </nav>
+
+    <!-- Main Body -->
         <div class="contact-me-div">
-            <h2>Email: leblancmichael94@gmail.com</h2>
-            <h2>Phone: (978) 399 8442</h2>
-            <h2>Location: Boston, MA</h2>
+            <h1>Michael T. LeBlanc</h1>
+            <h2>leblancmichael94@gmail.com</h2>
+            <h2>(978) 399 8442</h2>
+            <h2>Boston, MA</h2>
             <h2></h2>
         </div>
     </body>
