--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="index.html">MICHAEL LEBLANC | Web Developer</a></li>
             <span class="push">
-                <li><a href="">PORTFOLIO</a></li>
+                <li><a href="#mock-projects-body">PORTFOLIO</a></li>
                 <li><a href="">RESUME</a></li>
                 <li><a href="contactMe.html" class="contactMe">CONTACT ME</a></li>
             </span>
@@ -32,8 +32,8 @@
             <h3>Hi, my name Michael.</h3>
             <h3>This is my front-end developer portfolio</h3>
             <h1 class="socials">
-                <i class="fab fa-github"></i>
-                <i class="fab fa-linkedin"></i>
+                <a href="https://github.com/mleblanc94"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/michael-leblanc-a868869a/"><i class="fab fa-linkedin"></i></a>
             </h1>
         </div>
     </div>
@@ -43,7 +43,7 @@
 
 <!-- Mock Websites -->
 
-<div class="mock-projects-body">
+<div id="mock-projects-body">
     <div class="mock-websites">
         <div class="mock-website-header"><h1>Mock Websites</h1></div>
             <div class="Mikes-BBQ-Restaurant">
