added link usage to make them work

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="index.html">MICHAEL LEBLANC | Web Developer</a></li>
             <span class="push">
-                <li><a href="#mock-projects-body">PORTFOLIO</a></li>
+                <li><a href="#portfolio-div">PORTFOLIO</a></li>
                 <li><a href="">RESUME</a></li>
                 <li><a href="contactMe.html" class="contactMe">CONTACT ME</a></li>
             </span>
@@ -43,6 +43,7 @@
 
 <!-- Mock Websites -->
 
+<div id="portfolio-div"></div>
 <div id="mock-projects-body">
     <div class="mock-websites">
         <div class="mock-website-header"><h1>Mock Websites</h1></div>
@@ -75,6 +76,18 @@
                 <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://github.com/mleblanc94/WeatherAPI-Finder"> See the Source Code</a></p>
             </div>
             <div class="WeatherAPI-Finder-Pic"><img class="circular" src="WeatherAPI-Finder-Pic.JPG" alt="WeatherAPI-Picture"></div>
+        </div>
+        <div class="Joke-Teller">
+            <div class="text-and-links">
+                <h3>Joke Teller/Text to Speech API</h3>
+                <p>A project that was part of a course I took where I decided to take a stab at it without using the help of a tutorial. It was a difficult project in that it included two API's, one to grab a joke and another 
+                    to turn that joke text into speech. Great experience in using no outside references in order to solve problems and use prior knowledge
+                    to solve the problem.
+                </p>
+                <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://mleblanc94.github.io/Joke-Teller/"> View the website</a></p>
+                <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://github.com/mleblanc94/Joke-Teller"> See the Source Code</a></p>
+            </div>
+            <div class="WeatherAPI-Finder-Pic"><img class="circular" src="joke-teller-pic.JPG" alt="WeatherAPI-Picture"></div>
         </div>
       </div>
     </div>
