added more to the responsiveness of the site

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://mleblanc94.github.io/Joke-Teller/"> View the website</a></p>
                 <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://github.com/mleblanc94/Joke-Teller"> See the Source Code</a></p>
             </div>
-            <div class="WeatherAPI-Finder-Pic"><img class="circular" src="joke-teller-pic.JPG" alt="WeatherAPI-Picture"></div>
+            <div class="Joke-Teller-Pic"><img class="circular" src="joke-teller-pic.JPG" alt="WeatherAPI-Picture"></div>
         </div>
       </div>
     </div>
