--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="index.html">MICHAEL LEBLANC | Web Developer</a></li>
             <span class="push">
                 <li><a href="#portfolio-div">PORTFOLIO</a></li>
-                <li><a href="">RESUME</a></li>
+                <li><a href="Resume.docx">RESUME</a></li>
                 <li><a href="contactMe.html" class="contactMe">CONTACT ME</a></li>
             </span>
         </ul>
