added React section

--- a/index.html
+++ b/index.html
@@ -91,5 +91,26 @@
         </div>
       </div>
     </div>
+
+    <!-- React Projects Section -->
+
+    <div class="javascript-projects">
+        <div class="mock-websites">
+        <div class="javascript-projects-header"><h1>React</h1></div>
+        <div class="WeatherAPI-Finder">
+            <div class="text-and-links">
+                <h3>WeatherAPI Finder</h3>
+                <p>A fun project I created using the OpenWeatherMap API. I got great experience in fetching API's and subsequently implenting the data received to represent
+                    information to the user depending on the location they are looking for weather on.
+                </p>
+                <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://mleblanc94.github.io/WeatherAPI-Finder/"> View the website</a></p>
+                <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://github.com/mleblanc94/WeatherAPI-Finder"> See the Source Code</a></p>
+            </div>
+            <div class="WeatherAPI-Finder-Pic"><img class="circular" src="WeatherAPI-Finder-Pic.JPG" alt="WeatherAPI-Picture"></div>
+        </div>
+      </div>
+    </div>
+
+
 </body>
 </html>
