added more projects to portfolio

--- a/index.html
+++ b/index.html
@@ -99,18 +99,17 @@
         <div class="javascript-projects-header"><h1>React</h1></div>
         <div class="WeatherAPI-Finder">
             <div class="text-and-links">
-                <h3>WeatherAPI Finder</h3>
-                <p>A fun project I created using the OpenWeatherMap API. I got great experience in fetching API's and subsequently implenting the data received to represent
-                    information to the user depending on the location they are looking for weather on.
+                <h3>Face Finder</h3>
+                <p>One of the first projects I created as part of an online class using React. This project allows the end user to sign into an account and then 
+                    enter in a URL to determine if a face appears in the given picture or not. The app then also tallies how many faces the API has captured since that user
+                    created their account.
                 </p>
                 <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://mleblanc94.github.io/WeatherAPI-Finder/"> View the website</a></p>
                 <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://github.com/mleblanc94/WeatherAPI-Finder"> See the Source Code</a></p>
             </div>
-            <div class="WeatherAPI-Finder-Pic"><img class="circular" src="WeatherAPI-Finder-Pic.JPG" alt="WeatherAPI-Picture"></div>
+            <div class="WeatherAPI-Finder-Pic"><img class="circular" src="facePictureFinder.JPG" alt="Face-Finder-Picture"></div>
         </div>
       </div>
     </div>
-
-
 </body>
 </html>
