added links to the new project that was added

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                     enter in a URL to determine if a face appears in the given picture or not. The app then also tallies how many faces the API has captured since that user
                     created their account.
                 </p>
-                <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://mleblanc94.github.io/WeatherAPI-Finder/"> View the website</a></p>
-                <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://github.com/mleblanc94/WeatherAPI-Finder"> See the Source Code</a></p>
+                <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://smart-brain25.herokuapp.com/"> View the website</a></p>
+                <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://github.com/mleblanc94/smart-brain-api"> See the Source Code</a></p>
             </div>
             <div class="WeatherAPI-Finder-Pic"><img class="circular" src="facePictureFinder.JPG" alt="Face-Finder-Picture"></div>
         </div>
