added another section where my second React project is going to go

--- a/index.html
+++ b/index.html
@@ -109,6 +109,17 @@
             </div>
             <div class="WeatherAPI-Finder-Pic"><img class="circular" src="facePictureFinder.JPG" alt="Face-Finder-Picture"></div>
         </div>
+        <div class="Joke-Teller">
+            <div class="text-and-links">
+                <h3>NBA Player Finder</h3>
+                <p>As an NBA fan, I had a fun time creating this project using React as an easy way to find some quick facts on current NBA players around the league.
+                    The project allows the user to look up just about any player in the NBA and immediately have access to their basic information such as height, weight, position, and more.
+                </p>
+                <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://mleblanc94.github.io/Joke-Teller/"> View the website</a></p>
+                <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://github.com/mleblanc94/Joke-Teller"> See the Source Code</a></p>
+            </div>
+            <div class="Joke-Teller-Pic"><img class="circular" src="joke-teller-pic.JPG" alt="WeatherAPI-Picture"></div>
+        </div>
       </div>
     </div>
 </body>
