--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
             </div>
             <div class="WeatherAPI-Finder-Pic"><img class="circular" src="facePictureFinder.JPG" alt="Face-Finder-Picture"></div>
         </div>
+
+        <!-- NBA Player Finder App -->
+
         <div class="Joke-Teller">
             <div class="text-and-links">
                 <h3>NBA Player Finder</h3>
