--- a/index.html
+++ b/index.html
@@ -41,6 +41,40 @@
 
 <!-- PROJECTS -->
 
+    <!-- React Projects Section -->
+
+    <div class="javascript-projects">
+        <div class="mock-websites">
+        <div class="javascript-projects-header"><h1>ReactJS</h1></div>
+        <div class="WeatherAPI-Finder">
+            <div class="text-and-links">
+                <h3>Face Finder</h3>
+                <p>One of the first projects I created as part of an online class using React. This project allows the end user to sign into an account and then 
+                    enter in a URL to determine if a face appears in the given picture or not. The app then also tallies how many faces the API has captured since that user
+                    created their account.
+                </p>
+                <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://smart-brain25.herokuapp.com/"> View the website</a></p>
+                <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://github.com/mleblanc94/smart-brain-api"> See the Source Code</a></p>
+            </div>
+            <div class="WeatherAPI-Finder-Pic"><img class="circular" src="facePictureFinder.JPG" alt="Face-Finder-Picture"></div>
+        </div>
+
+        <!-- NBA Player Finder App -->
+
+        <div class="Joke-Teller">
+            <div class="text-and-links">
+                <h3>NBA Player Finder</h3>
+                <p>As an NBA fan, I had a fun time creating this project using React as an easy way to find some quick facts on current NBA players around the league.
+                    The project allows the user to look up just about any player in the NBA and immediately have access to their basic information such as height, weight, position, and more.
+                </p>
+                <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://mleblanc94.github.io/basketballplayers/"> View the website</a></p>
+                <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://github.com/mleblanc94/Joke-Teller"> See the Source Code</a></p>
+            </div>
+            <div class="Joke-Teller-Pic"><img class="circular" src="NBAPlayerFinder.JPG" alt="NBA Player Finder"></div>
+        </div>
+      </div>
+    </div>
+
 <!-- Mock Websites -->
 
 <div id="portfolio-div"></div>
@@ -83,40 +117,6 @@
                 <p>A project that was part of a course I took where I decided to take a stab at it without using the help of a tutorial. It was a difficult project in that it included two API's, one to grab a joke and another 
                     to turn that joke text into speech. Great experience in using no outside references in order to solve problems and use prior knowledge
                     to solve the problem.
-                </p>
-                <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://mleblanc94.github.io/Joke-Teller/"> View the website</a></p>
-                <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://github.com/mleblanc94/Joke-Teller"> See the Source Code</a></p>
-            </div>
-            <div class="Joke-Teller-Pic"><img class="circular" src="joke-teller-pic.JPG" alt="WeatherAPI-Picture"></div>
-        </div>
-      </div>
-    </div>
-
-    <!-- React Projects Section -->
-
-    <div class="javascript-projects">
-        <div class="mock-websites">
-        <div class="javascript-projects-header"><h1>React</h1></div>
-        <div class="WeatherAPI-Finder">
-            <div class="text-and-links">
-                <h3>Face Finder</h3>
-                <p>One of the first projects I created as part of an online class using React. This project allows the end user to sign into an account and then 
-                    enter in a URL to determine if a face appears in the given picture or not. The app then also tallies how many faces the API has captured since that user
-                    created their account.
-                </p>
-                <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://smart-brain25.herokuapp.com/"> View the website</a></p>
-                <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://github.com/mleblanc94/smart-brain-api"> See the Source Code</a></p>
-            </div>
-            <div class="WeatherAPI-Finder-Pic"><img class="circular" src="facePictureFinder.JPG" alt="Face-Finder-Picture"></div>
-        </div>
-
-        <!-- NBA Player Finder App -->
-
-        <div class="Joke-Teller">
-            <div class="text-and-links">
-                <h3>NBA Player Finder</h3>
-                <p>As an NBA fan, I had a fun time creating this project using React as an easy way to find some quick facts on current NBA players around the league.
-                    The project allows the user to look up just about any player in the NBA and immediately have access to their basic information such as height, weight, position, and more.
                 </p>
                 <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://mleblanc94.github.io/Joke-Teller/"> View the website</a></p>
                 <p><i class="fas fa-arrow-right"></i><a class="source-links" href="https://github.com/mleblanc94/Joke-Teller"> See the Source Code</a></p>
