changes to style of page as well as to functionality of home page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Michael T. LeBlanc</title>
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="index.html">MICHAEL LEBLANC | Web Developer</a></li>
             <span class="push">
-                <li><a href="#portfolio-div">PORTFOLIO</a></li>
+                <li><a href="#portfolio-start">PORTFOLIO</a></li>
                 <li><a href="Resume.docx">RESUME</a></li>
                 <li><a href="contactMe.html" class="contactMe">CONTACT ME</a></li>
             </span>
@@ -40,6 +40,8 @@
 </div>
 
 <!-- PROJECTS -->
+
+<div id="portfolio-start"></div>
 
     <!-- React Projects Section -->
 
