added effects to page

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <div class="cover-content">
         <div class="pic-div"><img class="circular" src="profile-picture.jpg" alt="profile-pic"></div>
         <div class="cover-text">
-            <h3>Hi, my name Michael.</h3>
-            <h3>This is my front-end developer portfolio</h3>
+            <h4>Hi, my name Michael.</h4>
+            <h3>This is my front-end developer portfolio.</h3>
             <h1 class="socials">
                 <a href="https://github.com/mleblanc94"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/michael-leblanc-a868869a/"><i class="fab fa-linkedin"></i></a>
