--- a/contactMe.html
+++ b/contactMe.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="index.html">MICHAEL LEBLANC | Web Developer</a></li>
             <span class="push">
-                <li><a href="index.html#portfolio-div">PORTFOLIO</a></li>
+                <li><a href="index.html#portfolio-start">PORTFOLIO</a></li>
                 <li><a href="">RESUME</a></li>
                 <li><a href="contactMe.html" class="contactMe">CONTACT ME</a></li>
             </span>
