created some extra space at the bottom of the screen

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <!-- Mock Websites -->
 
 <div id="portfolio-div"></div>
-<div id="mock-projects-body">
+<div class="final" id="mock-projects-body">
     <div class="mock-websites">
         <div class="mock-website-header"><h1>Mock Websites</h1></div>
             <div class="Mikes-BBQ-Restaurant">
